k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-service
  namespace: library-system
  labels:
    app: library-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: library-app
